HEAD
    + Passwordless and direct root login with anste-connect
    + Changing the kernel flavour from virtual to generic to allow
      nested virtualization
    + Change default images path to /var/tmp/anste-images
    + Fixed support for files in the scenarios defined in yaml
    + Changed the script that configured a host to be a dhcp-router
    + Allowing empty variables in the scenarios tests
    + Adding support to set the mirror from the image xml definition
    + Moving the mirror option to a new section
    + Deleted suppot for Xen and moved the mirror option to global section
    + Allow to specify architecture of base images
    + Added support for 64bit machines
    + Added in the config file the nameserver used in the setup script
    + Added support to the message directive in xml output report
    + Fixed support in yaml for the hw-addr directive that was broken
    + Fixed support in yaml for the bridges and manual-bridging directives
    + Properly write /etc/resolv.conf file in the setup script
    + Properly write /etc/resolv.conf file
    + Added retries to the mount image section when deploying an scenario
    + Fixed wrong error handling when base image does not exist
    + Added localdomain hostnames to /etc/hosts
    + Description attribute in tests is now optional
    + suites.list files can now contain comments and blank lines
    + anste-clean not longer kills itself
0.9
    + Improved behavior of test retry/continue prompt
    + New anste-connect tool to easily SSH into deployed hosts
    + Avoid negative MAC address error
    + More logs when verbosity is on: test commands and threads wait
    + Bugfix: dist value in anste.conf is no longer ignored
    + Using readline when running stopping during tests and treat better
      the given input
    + New anste-clean command to destroy all network and machines
    + Copy additional files for web tests to allow use of packages in scripts